<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_poster"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textSize="16sp"
                android:contentDescription="@string/movie_title" />

            <TextView
                android:id="@+id/tvMovieReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_release_date"
                android:textStyle="bold"
                android:contentDescription="@string/movie_release_date"/>

            <TextView
                android:id="@+id/tvMovieGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_genres"
                android:contentDescription="@string/movie_genres" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>